--- a/web/client/less/app/components/navbar.less
+++ b/web/client/less/app/components/navbar.less
@@ -23,6 +23,14 @@
             .nav-link-variant(@brand-primary);
         }
 
+        > .nav-link-info {
+            .nav-link-variant(@brand-info);
+        }
+
+        > .nav-link-warning {
+            .nav-link-variant(@brand-warning);
+        }
+
         > .nav-link-danger {
             .nav-link-variant(@brand-danger);
         }
