--- a/web/client/app/SongBook/Partial/show.html
+++ b/web/client/app/SongBook/Partial/show.html
@@ -1,20 +1,20 @@
 <layout-page>
     <!-- Header buttons -->
-    <layout-page-buttons>
-        <layout-page-button class="nav-link-danger">
+    <ui-header-buttons>
+        <ui-header-button class="nav-link-danger">
             <a href="">
                 <span class="fa fa-fw fa-trash-o"></span>
                 Delete
             </a>
-        </layout-page-button>
+        </ui-header-button>
 
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <a href="#/songs/{{ songShowCtrl.entity.id }}/edit">
                 <span class="fa fa-fw fa-pencil"></span>
                 Edit
             </a>
-        </layout-page-button>
-    </layout-page-buttons>
+        </ui-header-button>
+    </ui-header-buttons>
 
     <div class="song-show row">
         <div class="col-md-3 text-center">
