--- a/web/client/app/Theory/Partial/Chord/index.html
+++ b/web/client/app/Theory/Partial/Chord/index.html
@@ -1,18 +1,18 @@
 <layout-page class="page-list chord-list">
     <!-- Header buttons -->
-    <layout-page-buttons>
+    <ui-header-buttons>
         <!-- Note menu -->
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <note-menu data-current="chordListCtrl.root"></note-menu>
-        </layout-page-button>
+        </ui-header-button>
 
         <li class="divider"></li>
 
         <!-- List format button -->
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <layout-list-formatter data-format="chordListCtrl.format"></layout-list-formatter>
-        </layout-page-button>
-    </layout-page-buttons>
+        </ui-header-button>
+    </ui-header-buttons>
 
     <!-- Title of the page -->
     <layout-page-title>
