--- a/web/client/app/Instrument/Partial/CreateWizard/layout.html
+++ b/web/client/app/Instrument/Partial/CreateWizard/layout.html
@@ -1,32 +1,32 @@
 <layout-page>
     <!-- Header buttons -->
-    <layout-page-buttons>
+    <ui-header-buttons>
         <!-- Cancel -->
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <a href="#/instruments">
                 <span class="fa fa-fw fa-times"></span>
                 Cancel
             </a>
-        </layout-page-button>
+        </ui-header-button>
 
         <li class="divider"></li>
 
         <!-- Previous step -->
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <button data-ng-disabled="!instrumentCreateCtrl.hasPrevious" data-ng-click="instrumentCreateCtrl.previousStep()">
                 <span class="fa fa-fw fa-chevron-circle-left"></span>
                 Previous
             </button>
-        </layout-page-button>
+        </ui-header-button>
 
         <!-- Next step -->
-        <layout-page-button class="nav-link-default">
+        <ui-header-button class="nav-link-default">
             <button data-ng-disabled="!instrumentCreateCtrl.hasNext" data-ng-click="instrumentCreateCtrl.nextStep()">
                 Next
                 <span class="fa fa-fw fa-chevron-circle-right"></span>
             </button>
-        </layout-page-button>
-    </layout-page-buttons>
+        </ui-header-button>
+    </ui-header-buttons>
 
     <!-- Title of the page -->
     <layout-page-title>
