--- a/web/client/app/SongBook/Partial/form.html
+++ b/web/client/app/SongBook/Partial/form.html
@@ -44,21 +44,26 @@
     <form class="song-form row">
         <div class="col-md-3">
             <!-- Cover -->
-            <fieldset data-ngf-drop="" data-ng-model="songFormCtrl.data.cover.file" class="file-upload-dropbox" accept="image/*" data-ngf-max-size="2MB" style="margin-bottom: 30px;">
+            <fieldset
+                class="file-upload-dropbox" style="margin-bottom: 30px;"
+                data-ngf-drop="songFormCtrl.selectCover($file)"
+                data-ngf-accept="'image/*'"
+                data-ngf-max-size="2MB"
+            >
                 <legend>Cover</legend>
-                <div class="dropbox-info" data-ng-hide="songFormCtrl.data.cover.file">
-                    <img class="img-responsive img-shadow" data-ng-src="{{ 'images/no-cover.png'|asset_path }}" />
 
-                    <a href="" role="button" class="btn btn-block btn-default" data-ngf-select="songFormCtrl.selectCover($file)">
+                <div class="dropbox-thumb">
+                    <!-- File preview -->
+                    <img class="img-responsive img-shadow" data-ngf-src="songFormCtrl.data.cover.file || '{{ (songFormCtrl.data.cover.path|resource_path) || ('images/no-cover.png'|asset_path) }}'" />
+
+                    <!-- Choose a file to Upload -->
+                    <a href="" role="button" class="dropbox-select btn btn-block btn-default" data-ngf-select="songFormCtrl.selectCover($file)">
                         <span class="fa fa-upload"></span>
                         Choose a file
                     </a>
-                </div>
 
-                <div class="dropbox-thumb">
-                    <img class="img-responsive img-shadow" data-ngf-thumbnail="songFormCtrl.data.cover.file" data-ng-show="songFormCtrl.data.cover.file" />
-
-                    <a href="" role="button" class="btn btn-danger" data-ng-click="songFormCtrl.data.cover.file = null" data-ng-show="songFormCtrl.data.cover.file">
+                    <!-- Remove uploaded file -->
+                    <a href="" role="button" class="dropbox-remove btn btn-danger" data-ng-click="songFormCtrl.removeCover()" data-ng-show="songFormCtrl.data.cover.file || songFormCtrl.data.cover.path">
                         <span class="fa fa-trash-o"></span>
                         <span class="sr-only">Remove uploaded file</span>
                     </a>
@@ -79,23 +84,19 @@
         </div>
 
         <div class="col-md-9">
-            <fieldset>
-                <legend>Information</legend>
+            <div class="panel panel-default panel-last">
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="song_title" class="control-label">Title</label>
+                        <input type="text" class="form-control" name="song_title" id="song_title" data-ng-model="songFormCtrl.data.title" />
+                    </div>
 
-                <div class="panel panel-default panel-last">
-                    <div class="panel-body">
-                        <div class="form-group">
-                            <label for="song_title" class="control-label">Title</label>
-                            <input type="text" class="form-control" name="song_title" id="song_title" data-ng-model="songFormCtrl.data.title" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="song_artist" class="control-label">Artist</label>
-                            <input type="text" class="form-control" name="song_artist" id="song_artist" data-ng-model="songFormCtrl.data.artist" />
-                        </div>
+                    <div class="form-group">
+                        <label for="song_artist" class="control-label">Artist</label>
+                        <input type="text" class="form-control" name="song_artist" id="song_artist" data-ng-model="songFormCtrl.data.artist" />
                     </div>
                 </div>
-            </fieldset>
+            </div>
         </div>
     </form>
 </layout-page>
