end refactoring Client and Api providers

--- a/web/client/src/app/Lesson/Partial/Lesson/form.html
+++ b/web/client/src/app/Lesson/Partial/Lesson/form.html
@@ -60,6 +60,6 @@
             </li>
         </ul>
 
-        <div class="lesson-content" data-ng-include="'Lesson/Form/' + formCtrl.view + '.html'|partial_path:'Lesson'"></div>
+        <div class="lesson-content" data-ng-include="'Lesson/Form/' + formCtrl.view + '.html'|partial_path:'app/Lesson'"></div>
     </form>
 </layout-page>
