--- a/web/client/src/app/SongBook/Partial/Song/List/item-detailed.html
+++ b/web/client/src/app/SongBook/Partial/Song/List/item-detailed.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- Image -->
         <div class="song-cover col-lg-2 col-md-2 col-sm-2 col-xs-3">
-            <img class="img-responsive" data-ng-src="{{ resource.cover.path ? (resource.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" />
+            <img class="img-responsive" data-ng-src="{{ resource.cover.path ? (resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}" />
         </div>
 
         <!-- Info -->
