--- a/web/client/src/app/SongBook/Partial/Song/show.html
+++ b/web/client/src/app/SongBook/Partial/Song/show.html
@@ -19,7 +19,7 @@
     <div class="song-show row">
         <div class="col-md-3 text-center">
             <!-- Cover -->
-            <img class="img-responsive img-shadow" data-ng-src="{{ showCtrl.resource.cover.path ? (showCtrl.resource.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" style="margin-bottom: 30px;" />
+            <img class="img-responsive img-shadow" data-ng-src="{{ showCtrl.resource.cover.path ? (showCtrl.resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}" style="margin-bottom: 30px;" />
 
             <!--Rating-->
             <fieldset class="text-center" style="margin-bottom: 30px;">
