--- a/web/client/src/app/Instrument/Partial/Instrument/index.html
+++ b/web/client/src/app/Instrument/Partial/Instrument/index.html
@@ -27,7 +27,7 @@
     <div class="row">
         <!-- List items -->
         <div data-ng-repeat="resource in listCtrl.resources|orderBy:listCtrl.sortBy:listCtrl.sortReverse"
-             data-ng-include="'Instrument/List/item-' + listCtrl.format + '.html'|partial_path:'Instrument'"
+             data-ng-include="'Instrument/List/item-' + listCtrl.format + '.html'|partial_path:'app/Instrument'"
              data-ng-class="{ 'col-md-12': 'tile' !== listCtrl.format, 'col-xs-12 col-sm-4 col-md-3 col-lg-2': 'tile' === listCtrl.format }"
         ></div>
     </div>
