--- a/web/client/src/app/SongBook/Partial/Song/List/item-tile.html
+++ b/web/client/src/app/SongBook/Partial/Song/List/item-tile.html
@@ -1,7 +1,7 @@
 <div class="list-item list-item-tile panel panel-default">
     <!-- Image -->
     <div class="song-cover">
-        <img class="img-responsive" data-ng-src="{{ resource.cover.path ? (resource.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}" />
+        <img class="img-responsive" data-ng-src="{{ resource.cover.path ? (resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}" />
     </div>
 
     <!-- Info -->
