--- a/web/client/src/app/SongBook/Partial/Song/form.html
+++ b/web/client/src/app/SongBook/Partial/Song/form.html
@@ -54,7 +54,7 @@
 
                 <div class="dropbox-thumb">
                     <!-- File preview -->
-                    <img class="img-responsive img-shadow" data-ngf-src="formCtrl.data.cover.file || '{{ formCtrl.resource.cover.path ? (formCtrl.resource.cover.path|resource_path) : ('images/no-cover.png'|asset_path) }}'" />
+                    <img class="img-responsive img-shadow" data-ngf-src="formCtrl.data.cover.file || '{{ formCtrl.resource.cover.path ? (formCtrl.resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}'" />
 
                     <!-- Choose a file to Upload -->
                     <a href="" role="button" class="dropbox-select btn btn-block btn-default" data-ngf-select="formCtrl.selectCover($file)">
