--- a/web/client/src/app/Theory/Partial/Chord/index.html
+++ b/web/client/src/app/Theory/Partial/Chord/index.html
@@ -24,7 +24,7 @@
     <div class="row">
         <!-- List items -->
         <div data-ng-repeat="resource in listCtrl.resources|orderBy:listCtrl.sortBy:listCtrl.sortReverse"
-             data-ng-include="'Chord/List/item-' + listCtrl.format + '.html'|partial_path:'Theory'"
+             data-ng-include="'Chord/List/item-' + listCtrl.format + '.html'|partial_path:'app/Theory'"
              data-ng-class="{ 'col-md-12': 'tile' !== listCtrl.format, 'col-xs-12 col-sm-4 col-md-3 col-lg-2': 'tile' === listCtrl.format }"
         ></div>
     </div>
