--- a/web/client/styles/app.less
+++ b/web/client/styles/app.less
@@ -11,31 +11,26 @@
 
 @import "boilerplate.less";
 
-@import "components/alerts.less";
-@import "components/buttons.less";
-@import "components/dropdowns.less";
-@import "components/fields.less";
-@import "components/forms.less";
-@import "components/header.less";
-@import "components/list.less";
-@import "components/modals.less";
-@import "components/navbar.less";
-@import "components/panels.less";
-@import "components/sidebar.less";
-@import "components/scrollbar.less";
+@import "core/alerts.less";
+@import "core/buttons.less";
+@import "core/dropdowns.less";
+@import "core/fields.less";
+@import "core/forms.less";
+@import "core/header.less";
+@import "core/list.less";
+@import "core/modals.less";
+@import "core/navbar.less";
+@import "core/panels.less";
+@import "core/sidebar.less";
+@import "core/scrollbar.less";
 
 @import "theme.less";
 
-// Bundles styles
-@import "bundles/instrument.less";
-@import "bundles/guitar.less";
-@import "bundles/guitar_neck.less";
-@import "bundles/user.less";
-@import "bundles/advertisement.less";
-
 // Modules styles
-@import "modules/SheetMusic/module.less";
-@import "modules/Instrument/module.less";
-@import "modules/SongBook/module.less";
-@import "modules/Theory/module.less";
-@import "modules/Lesson/module.less";
+@import "app/Advertisement/module.less";
+@import "app/Instrument/module.less";
+@import "app/Lesson/module.less";
+@import "app/SheetMusic/module.less";
+@import "app/SongBook/module.less";
+@import "app/Theory/module.less";
+@import "app/User/module.less";
