--- a/web/client/src/app/Instrument/Partial/Instrument/List/item-condensed.html
+++ b/web/client/src/app/Instrument/Partial/Instrument/List/item-condensed.html
@@ -1,4 +1,9 @@
 <div class="list-item list-item-condensed panel panel-default">
+    <!-- Image -->
+    <div class="item-image">
+        <img class="instrument-type-img" data-ng-src="{{ 'images/' + resource.relationships.instrumentType.data.attributes.icon |asset_path }}" />
+    </div>
+
     <!-- Info -->
     <div class="item-info panel-body">
         {{ resource.attributes.manufacturer }}
