--- a/web/client/src/app/SongBook/Partial/Song/List/item-condensed.html
+++ b/web/client/src/app/SongBook/Partial/Song/List/item-condensed.html
@@ -1,7 +1,7 @@
 <div class="list-item list-item-condensed panel panel-default">
     <!-- Image -->
     <div class="song-cover">
-        <img class="" data-ng-src="{{ resource.cover.path ? (resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}" />
+        <img data-ng-src="{{ resource.cover.path ? (resource.cover.path|upload_path) : ('images/no-cover.png'|asset_path) }}" />
     </div>
 
     <!-- Info -->
